8264085: [lworld] C2 compilation fails with assert "inline type should be loaded"