src/hotspot/share/opto/inlinetypenode.cpp
@@ -273,13 +273,12 @@ void InlineTypeBaseNode::load(GraphKit* kit, Node* base, Node* ptr, ciInstanceKl
     int offset = holder_offset + field_offset(i);
     Node* value = NULL;
     ciType* ft = field_type(i);
-    if (field_is_flattened(i)) {
-      if (ft->as_inline_klass()->is_empty()) {
-        value = InlineTypeNode::make_default(kit->gvn(), ft->as_inline_klass());
-      } else {
-        // Recursively load the flattened inline type field
-        value = InlineTypeNode::make_from_flattened(kit, ft->as_inline_klass(), base, ptr, holder, offset, decorators);
-      }
+    if (ft->is_inlinetype() && ft->as_inline_klass()->is_empty()) {
+      // Loading from a field of an empty inline type. Just return the default instance.
+      value = InlineTypeNode::make_default(kit->gvn(), ft->as_inline_klass());
+    } else if (field_is_flattened(i)) {
+      // Recursively load the flattened inline type field
+      value = InlineTypeNode::make_from_flattened(kit, ft->as_inline_klass(), base, ptr, holder, offset, decorators);
     } else {
       const TypeOopPtr* oop_ptr = kit->gvn().type(base)->isa_oopptr();
       bool is_array = (oop_ptr->isa_aryptr() != NULL);
@@ -689,13 +688,13 @@ Node* InlineTypeNode::is_loaded(PhaseGVN* phase, ciInlineKlass* vk, Node* base, 
     Node* value = field_value(i);
     if (value->is_InlineType()) {
       InlineTypeNode* vt = value->as_InlineType();
-      if (field_is_flattened(i)) {
-        if (!vt->inline_klass()->is_empty()) {
-          // Check inline type field load recursively
-          base = vt->is_loaded(phase, vk, base, offset - vt->inline_klass()->first_field_offset());
-          if (base == NULL) {
-            return NULL;
-          }
+      if (vt->inline_klass()->is_empty()) {
+        continue;
+      } else if (field_is_flattened(i)) {
+        // Check inline type field load recursively
+        base = vt->is_loaded(phase, vk, base, offset - vt->inline_klass()->first_field_offset());
+        if (base == NULL) {
+          return NULL;
         }
         continue;
       } else {
